Thu Apr 12 10:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:
          Added patches for bug 2678, thanks to Alexander Kornienko
          <alexfh at gmail dot com> for creating the patch and the
          starter test program for this bug. Thanks to
          Dale Boan <boan at sedsystems dot ca> for creating the initial
          report and Ben Mohlenhoff <Benjamin_A_Mohlenhoff at raytheon dot com>
          for letting us know that the patched also worked for their setup.

        * tao/DynamicInterface/DII_Arguments.h:
          Const improvement

        * tao/DynamicInterface/ExceptionList.inl:
          Removed not needed cast and use C++ casts

        * tao/IOR_Parser.h:
          Documentation improvement

        * tao/Pluggable_Messaging_Utils.inl:
          Use false instead of 0

        * tao/Stub.h:
          Layout changes

        * tao/GIOP_Message_Base.cpp:
        * tao/Profile.h:
          Layout changes

Thu Apr 12 06:25:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2678_Regression/client.cpp:
          Fixed typo in include

Wed Apr 11 18:31:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2678_Regression/*:
          New regression test, it needs a C# client as reproducer, that will
          not work, so I am reusing parts of the PMB GIOP test to emulate
          a client but this is not working 100% perfect. When it works perfect
          I will enable the regression test in the test suite.

Wed Apr 11 13:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMI/ami_test_i.cpp:
          Fixed small bug in this test code that could lead to an
          incorrect return value when the parameters are checked.

Wed Apr 11 12:25:17 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Notify/Makefile.am:
