@@ -1,3 +1,8 @@
+Thu Apr 12 12:00:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/POA/DSI/Database_i.{h,cpp}:
+          Added nothrow new/delete operators
+
 Thu Apr 12 10:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
